--- a/chandhas/index.html
+++ b/chandhas/index.html
@@ -165,7 +165,7 @@
         </section>
 
         <footer>
-            <p>&copy; 2023 Chandhas Identifier | Created with ❤️ for Sanskrit Poetry</p>
+            <p>&copy; 2025 Chandhas Identifier</p>
         </footer>
     </div>
 
